# oplink-client

./: .gitignore  ARCHITECTURE.md  BUILD_NOTES.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  config.json.template  qml.qrc  validate_structure.sh
src/: main.cpp
src/config/: ConfigManager.cpp  ConfigManager.h
src/media/: AudioDevice.cpp  AudioDevice.h  MediaPipeline.cpp  MediaPipeline.h  RNNoiseProcessor.cpp  RNNoiseProcessor.h
src/models/: Channel.cpp  Channel.h  Message.cpp  Message.h  Presence.cpp  Presence.h  Server.cpp  Server.h  User.cpp  User.h
src/services/: AuthService.cpp  AuthService.h  HttpClient.cpp  HttpClient.h  MessageService.cpp  MessageService.h  PresenceService.cpp  PresenceService.h  VideoService.cpp  VideoService.h  VoiceService.cpp  VoiceService.h  WsClient.cpp  WsClient.h
src/stores/: ChannelStore.cpp  ChannelStore.h  MessageStore.cpp  MessageStore.h  ServerStore.cpp  ServerStore.h  SessionStore.cpp  SessionStore.h
src/ui/qml/: Theme.qml  main.qml
src/ui/qml/components/: ChannelList.qml  LoginDialog.qml  MemberList.qml  ServerList.qml  StatusBar.qml
src/ui/qml/views/: ChatView.qml  ServerView.qml
